styles.css
html {
    font-size: calc(13px + 0.390625vw);
    font-family: 'Ysabeau Infant', sans-serif;
}

h1 {
    font-size: 1.7 em;
}

ul{
    list-style: none;
    display: flex;
 }

 li{
    padding-left: 10px;
 }

span{
    font-weight: bold;
    font-size: 1.5em;
}

@media (prefers-color-scheme: dark) {
    body{
        background-color: #1a1919;
        color: white;
    }
    
    body.light-theme {
           color: #222;
           background-color: #fff;
          }
}

@media (prefers-color-scheme: light) {
    body{
        color: #222;
        background-color: #fff;
    }
    
    body.dark-theme {
        background-color: #1a1919;
        color: white;
          }
}
   
   

.header-container{
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 0 20px 0 20px;
}



.content-container{   
    margin-top: 50px;
    display: flex;
    justify-content: center;
   
}

.content{
   max-width: 50%;
}


.material-symbols-outlined{
    cursor: pointer;
}

